started styling header / chatbar. need to fix gap between keyboard on iphone

--- a/client/src/public/stylesheets/mobilebot/_chatbar-m.scss
+++ b/client/src/public/stylesheets/mobilebot/_chatbar-m.scss
@@ -1,13 +1,13 @@
 //styling chatbar
 
-.chatbar {
-  height: 3em;
-  width: 25em;
+.chatbar-m {
+  height: 4.2em;
+  width: 100vw;
   padding: 16px;
   padding-left: 8px;
   padding-right: 10px;
   border-top: 1px solid #939393;
-  background-color: #ffffff;
+  background-color: #ffc107;
   color: $not-black;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -122,4 +122,8 @@ button.mic:active {
 
 .chat-input {
   outline: none !important;
+}
+
+.test-m {
+  background-color: red;
 }
