--- a/client/src/public/stylesheets/mobilebot/_header-m.scss
+++ b/client/src/public/stylesheets/mobilebot/_header-m.scss
@@ -30,7 +30,7 @@
 .header-m {
   width: 100vw;
   height: 3em;
-  background-color: #ffffff;
+  background-color: #ffc107;
   box-shadow: 0px 2px 2px rgba(179, 179, 179, 0.7);
   top: 0px;
   position: fixed;
